Update and rename catppuccin-mocha.conf to rosepine-moon.conf

--- a/src/rosepine-moon.conf
+++ b/src/rosepine-moon.conf
@@ -1,67 +1,62 @@
 #
-#  catppuccin.conf
+#  rosepine-moon.conf
 #  
 #  Copyright 2022 waxxx333 <waxxx@WindowsXP>
 #  Reference the filetypes files before editing this config file.
 # 
 [theme_info]
-name=Catppuccin Mocha
-description=Soothing pastel theme for the high-spirited!
+name=Rosé Pine Moon
+description=All natural pine, faux fur and a bit of soho vibes for the classy minimalist.
 version=0.2.5
-author=Isabelinc
+author=izzy
 compat=1.22;1.23;1.23.1;1.24
 
 [named_colors]
-mantle=#181825
-base=#1E1E2E
-surface0=#313244
+mantle=#191724
+base=#232136
+surface0=#2a273f
 # 
-text=#C6D0F5
-subtext0=#A1A8C9
-subtext1=#B3BCDF
+text=#e0def4
+subtext0=#908caa
+subtext1=#6e6a86
 #
-overlay2=#8E95B3
-overlay1=#7B819D
-overlay0=#696D86
+overlay2=#26233a
+overlay1=#393552
+overlay0=#f2e9e1
 #
-blue=#87B0F9
-sky=#89DCEB
-teal=#94E2D5
+iris=#c4a7e7
+leaf=#31748f
+foam=#9ccfd8
 #
-yellow=#F9E2AF
+gold=#f6c177
 #
-green=#A6E3A1
+pine=#3e8fb0
 #
-flamingo=#F2CDCD
-mauve=#CBA6F7
-pink=#F5C2E7
-maroon=#EBA0AC
-red=#F38BA8
-peach=#FAB387
-rosewater=#F5E0DC
-lavender=#B4BEFE
-sapphire=#74C7EC
+rose=#ea9a97
+love=#eb6f92
+petal=#EBBCBA
+lavender=#c4a7e7
 
 
 [named_styles]
-operator=blue
+operator=iris
 default=subtext1;base;false;false
-error=red;yellow;false;true
-op=blue;base;true;false
+error=love;gold;false;true
+op=iris;base;true;false
 # Editor UI
 #  selection: words; background
-selection=pink;blue;false;false
+selection=pine;iris;true;true
 current_line=;surface0;true
-brace_good=green;overlay1;true;true
-brace_bad=red;overlay1;true;true
+brace_good=pine;overlay1;true;true
+brace_bad=love;overlay1;true;true
 margin_line_number=text;base
 margin_folding=text;surface0
 fold_symbol_highlight=text
 indent_guide=overlay1
 caret=text;;false
-marker_line=yellow;yellow
-marker_search=mantle;blue
-marker_mark=green;surface0
+marker_line=gold;gold
+marker_search=mantle;iris
+marker_mark=pine;surface0
 call_tips=overlay1;text;false;false
 white_space=overlay1;;true
 
@@ -73,36 +68,36 @@ comment_line_doc=comment_doc
 comment_doc_keyword=comment,bold
 comment_doc_keyword_error=comment,italic
 
-number=teal
+number=foam
 number_1=number
 number_2=number_1
 
 # class <color()>
-type=pink;;flase;true;
+type=rose;;flase;true;
 
-class=blue
+class=iris
 # def <color():>
-function=teal;;false;true;
-parameter=peach
+function=foam;;false;true;
+parameter=petal
 
 
 keyword=default
 # def, for, in
-keyword_1=red;;false;true
+keyword_1=love;;false;true
 keyword_2=default
-keyword_3=peach
+keyword_3=petal
 keyword_4=keyword_2
 
-identifier=sky;;false;false
+identifier=leaf;;false;false
 # main 
 identifier_1=subtext0;;false;false
 identifier_2=default
 identifier_3=identifier_2
 identifier_4=identifier_2
 
-string=green;;false;false
-string_1=peach;;false;false
-string_2=green;;false;false
+string=pine;;false;false
+string_1=petal;;false;false
+string_2=pine;;false;false
 string_3=default
 string_4=default
 string_eol=string_1
@@ -111,9 +106,9 @@ backticks=string_2
 here_doc=string_2
 
 scalar=string_2
-label=red
-preprocessor=green
-regex=pink
+label=love
+preprocessor=pine
+regex=rose
 operator=lavender;;true;false
 decorator=string_1
 other=default
@@ -129,6 +124,6 @@ value=number
 entity=number
 
 # Diff
-line_added=green
-line_removed=red
+line_added=pine
+line_removed=love
 line_changed=preprocessor
