--- a/src/rosepine-moon.conf
+++ b/src/rosepine-moon.conf
@@ -8,7 +8,7 @@
 name=Rosé Pine Moon
 description=All natural pine, faux fur and a bit of soho vibes for the classy minimalist.
 version=0.2.5
-author=izzy
+author=Isabelinc
 compat=1.22;1.23;1.23.1;1.24
 
 [named_colors]
